--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8edcc5">  <td>24/01/30 21:45:03</td>   <td>0</td> <td title="&lt;&lt;BaseTestClass.tearDown()[pri:0, instance:SpringStarter.SpringStarter.Guru99Demo@d9345cd]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@292641216</td>   <td></td> </tr>
-<tr bgcolor="8edcc5">  <td>24/01/30 21:44:47</td>   <td>-15968</td> <td title="&gt;&gt;BaseTestClass.initDriver()[pri:0, instance:SpringStarter.SpringStarter.Guru99Demo@d9345cd]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@292641216</td>   <td></td> </tr>
-<tr bgcolor="98ac89">  <td>24/01/30 21:44:55</td>   <td>-8429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Guru99Demo.testScrollUpAndDown()[pri:0, instance:SpringStarter.SpringStarter.Guru99Demo@d9345cd]">testScrollUpAndDown</td> 
+<tr bgcolor="81a7ac">  <td>24/02/02 14:32:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TetsingRetryAnalyzer.doTest()[pri:0, instance:SpringStarter.SpringStarter.TetsingRetryAnalyzer@56cdfb3b]">doTest</td> 
   <td>main@292641216</td>   <td></td> </tr>
 </table>
